// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > snap 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-focus: 64 150 255;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-focus: 115 209 61;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-focus: 255 197 61;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-focus: 255 77 79;
  --ice-error-content: 255 255 255;
  --ice-info: 22 119 255;
  --ice-info-focus: 64 150 255;
  --ice-info-content: 255 255 255;
  --ice-neutral: 191 191 191;
  --ice-neutral-focus: 217 217 217;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-btn-text-case: uppercase;
  --ice-btn-focus-scale: 0.95;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-theme=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-focus: 21 84 173;
  --ice-primary-content: 0 0 0;
  --ice-success: 73 170 25;
  --ice-success-focus: 60 134 24;
  --ice-success-content: 0 0 0;
  --ice-warning: 216 150 20;
  --ice-warning-focus: 170 119 20;
  --ice-warning-content: 0 0 0;
  --ice-error: 211 32 41;
  --ice-error-focus: 166 29 36;
  --ice-error-content: 0 0 0;
  --ice-info: 22 104 220;
  --ice-info-focus: 21 84 173;
  --ice-info-content: 0 0 0;
  --ice-neutral: 42 50 60;
  --ice-neutral-focus: 36 43 51;
  --ice-neutral-content: 166 173 186;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 186;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-btn-text-case: uppercase;
  --ice-btn-focus-scale: 0.95;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;

exports[`base > snap case 1 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-focus: 64 150 255;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-focus: 115 209 61;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-focus: 255 197 61;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-focus: 255 77 79;
  --ice-error-content: 255 255 255;
  --ice-info: 22 119 255;
  --ice-info-focus: 64 150 255;
  --ice-info-content: 255 255 255;
  --ice-neutral: 191 191 191;
  --ice-neutral-focus: 217 217 217;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-btn-text-case: uppercase;
  --ice-btn-focus-scale: 0.95;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-focus: 21 84 173;
  --ice-primary-content: 0 0 0;
  --ice-success: 73 170 25;
  --ice-success-focus: 60 134 24;
  --ice-success-content: 0 0 0;
  --ice-warning: 216 150 20;
  --ice-warning-focus: 170 119 20;
  --ice-warning-content: 0 0 0;
  --ice-error: 211 32 41;
  --ice-error-focus: 166 29 36;
  --ice-error-content: 0 0 0;
  --ice-info: 22 104 220;
  --ice-info-focus: 21 84 173;
  --ice-info-content: 0 0 0;
  --ice-neutral: 42 50 60;
  --ice-neutral-focus: 36 43 51;
  --ice-neutral-content: 166 173 186;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 186;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-btn-text-case: uppercase;
  --ice-btn-focus-scale: 0.95;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;
